--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 *{
   margin: 0;
 }
+body{
+  background-color: #F7F3F0;
+}
 
 .app__header{
   display: flex;
@@ -8,6 +11,8 @@
   align-items: center;
   margin-bottom: 20px;
 }
-.app__dropdown{
+.app__stats{
+ display: flex;
+ justify-content: space-between;
 
 }
