--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
 body{
   background-color: #F7F3F0;
 }
+.app{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
 
 .app__header{
   display: flex;
@@ -15,4 +20,14 @@ body{
  display: flex;
  justify-content: space-between;
 
+}
+
+.app__left{
+  flex: 0.9;
+}
+
+@media (max-width:990px){
+  .app{
+    flex-direction: column;
+  }
 }
